# hxm-streamlit-template

./: .gitignore  README.md  app.py  pyproject.toml
assets/: plotly_theme.py  streamlit_style_hack.py
pages/: 01_page1.py  02_page2.py
