[tool.poetry]
name = "hxm-streamlit-template"
version = "0.1.0"
description = ""
authors = ["you <you@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
streamlit = "^1.36.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.12"

[[tool.poetry.source]]
name = "bloomberg"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
